# defillama

./: .gitignore  LICENSE  Makefile  README.md  defillama-api-spec.json  pyproject.toml  requirements.txt
src/defillama/: __init__.py  client.py  models.py
tests/: test_client.py
